@@ -103,32 +103,34 @@ public class EqualIntervalFunction extends ClassificationFunction {
         Comparable[] localMax = new Comparable[classNum];
         for (int i = 0; i < classNum; i++) {
             // calculate the min + max values
-            localMin[i] = new Double(((Number) globalMin).doubleValue() + (i * slotWidth));
+            localMin[i] = Double.valueOf(((Number) globalMin).doubleValue() + (i * slotWidth));
             localMax[i] =
-                    new Double(
+                    Double.valueOf(
                             ((Number) globalMax).doubleValue() - ((classNum - i - 1) * slotWidth));
             // determine number of decimal places to allow
             int decPlaces = decimalPlaces(slotWidth);
             // clean up truncation error
             if (decPlaces > -1) {
-                localMin[i] = new Double(round(((Number) localMin[i]).doubleValue(), decPlaces));
-                localMax[i] = new Double(round(((Number) localMax[i]).doubleValue(), decPlaces));
+                localMin[i] =
+                        Double.valueOf(round(((Number) localMin[i]).doubleValue(), decPlaces));
+                localMax[i] =
+                        Double.valueOf(round(((Number) localMax[i]).doubleValue(), decPlaces));
             }
 
             if (i == 0) {
                 // ensure first min is less than or equal to globalMin
-                if (localMin[i].compareTo(new Double(((Number) globalMin).doubleValue())) < 0)
+                if (localMin[i].compareTo(Double.valueOf(((Number) globalMin).doubleValue())) < 0)
                     localMin[i] =
-                            new Double(
+                            Double.valueOf(
                                     fixRound(
                                             ((Number) localMin[i]).doubleValue(),
                                             decPlaces,
                                             false));
             } else if (i == classNum - 1) {
                 // ensure last max is greater than or equal to globalMax
-                if (localMax[i].compareTo(new Double(((Number) globalMax).doubleValue())) > 0)
+                if (localMax[i].compareTo(Double.valueOf(((Number) globalMax).doubleValue())) > 0)
                     localMax[i] =
-                            new Double(
+                            Double.valueOf(
                                     fixRound(
                                             ((Number) localMax[i]).doubleValue(), decPlaces, true));
             }
@@ -165,7 +167,7 @@ public class EqualIntervalFunction extends ClassificationFunction {
         // instead)
 
         // calculate number of items to put in each of the larger bins
-        int binPop = new Double(Math.ceil((double) values.length / classNum)).intValue();
+        int binPop = Double.valueOf(Math.ceil((double) values.length / classNum)).intValue();
         // determine index of bin where the next bin has one less item
         int lastBigBin = values.length % classNum;
         if (lastBigBin == 0) lastBigBin = classNum;
