@@ -45,6 +45,6 @@ public class FilterFunction_getX extends FunctionExpressionImpl {
                     "Filter Function problem for function getX argument #0 - expected type Geometry");
         }
 
-        return new Double(StaticGeometry.getX(arg0));
+        return Double.valueOf(StaticGeometry.getX(arg0));
     }
 }
