@@ -27,7 +27,6 @@ import java.util.logging.Level;
 import java.util.logging.LogRecord;
 import java.util.logging.Logger;
 import java.util.stream.Stream;
-import javax.imageio.spi.ServiceRegistry;
 import org.geotools.metadata.i18n.ErrorKeys;
 import org.geotools.metadata.i18n.Errors;
 import org.geotools.metadata.i18n.LoggingKeys;
@@ -159,24 +158,10 @@ public class FactoryRegistry {
     }
 
     @Override
+    @SuppressWarnings("deprecation") // finalize is deprecated in Java 9
     protected void finalize() throws Throwable {
         deregisterAll();
         super.finalize();
-    }
-
-    /** @deprecated Replace with {@link ServiceLoader#load(Class)} */
-    @Deprecated
-    public static <T> Iterator<T> lookupProviders(Class<T> service) {
-        return ServiceLoader.load(service).iterator();
-    }
-
-    /**
-     * @param classLoader
-     * @deprecated Replace with {@link ServiceLoader#load(Class,ClassLoader)}
-     */
-    @Deprecated
-    public static <T> Iterator<T> lookupProviders(Class<T> service, ClassLoader classLoader) {
-        return ServiceLoader.load(service, classLoader).iterator();
     }
 
     /**
@@ -193,12 +178,6 @@ public class FactoryRegistry {
         return registry.streamCategories();
     }
 
-    /** @deprecated Please use {@link #getFactoryByClass(Class)} */
-    @Deprecated
-    public <T> T getServiceProviderByClass(Class<T> providerClass) {
-        return getFactoryByClass(providerClass);
-    }
-
     /**
      * Instance of category, or null if not available.
      *
@@ -212,14 +191,6 @@ public class FactoryRegistry {
     }
 
     /**
-     * @deprecated Replaced by {@link #getFactories(Class, boolean)
-     */
-    @Deprecated
-    public <T> Iterator<T> getServiceProviders(final Class<T> category, final boolean useOrdering) {
-        return getFactories(category, useOrdering).iterator();
-    }
-
-    /**
      * Factories for the provided category type.
      *
      * @param category The category to look for. Usually an interface class (not the actual
@@ -230,16 +201,6 @@ public class FactoryRegistry {
      */
     public <T> Stream<T> getFactories(final Class<T> category, final boolean useOrdering) {
         return registry.streamInstances(category, useOrdering);
-    }
-
-    /** @deprecated Replaced by {@link #getFactories(Class, Predicate, boolean)} */
-    @Deprecated
-    public <T> Iterator<T> getServiceProviders(
-            final Class<T> category,
-            final ServiceRegistry.Filter filter,
-            final boolean useOrdering) {
-        Predicate<T> factoryFilter = filter == null ? null : filter::filter;
-        return getFactories(category, factoryFilter, useOrdering).iterator();
     }
 
     /**
@@ -258,14 +219,6 @@ public class FactoryRegistry {
             final boolean useOrdering) {
         Stream<T> factories = getFactories(category, useOrdering);
         return factoryFilter == null ? factories : factories.filter(factoryFilter);
-    }
-
-    /** @deprecated Replaced with {@link #getFactories(Class, Predicate, Hints)} */
-    @Deprecated
-    public synchronized <T> Iterator<T> getServiceProviders(
-            final Class<T> category, final ServiceRegistry.Filter filter, final Hints hints) {
-        Predicate<? super T> predicate = filter == null ? null : filter::filter;
-        return getFactories(category, predicate, hints).iterator();
     }
 
     /**
@@ -335,21 +288,6 @@ public class FactoryRegistry {
         }
         scanForPluginsIfNeeded(category);
         return getFactories(category, true);
-    }
-
-    /**
-     * @deprecated Replaced with {@link #getFactory(Class, Predicate, Hints,
-     *     org.geotools.util.factory.Hints.Key)}
-     */
-    @Deprecated
-    public <T> T getServiceProvider(
-            final Class<T> category,
-            final ServiceRegistry.Filter filter,
-            Hints hints,
-            final Hints.Key key)
-            throws FactoryRegistryException {
-        Predicate<T> predicate = filter == null ? null : filter::filter;
-        return getFactory(category, predicate, hints, key);
     }
 
     /**
@@ -951,12 +889,6 @@ public class FactoryRegistry {
         }
     }
 
-    /** @deprecated Replaced with {@link #deregisterFactories(Iterable)} */
-    @Deprecated
-    public void registerServiceProviders(final Iterator<?> providers) {
-        registerFactories(providers);
-    }
-
     /**
      * Manually register factories.
      *
@@ -983,12 +915,6 @@ public class FactoryRegistry {
         factories.forEach(this::registerFactory);
     }
 
-    /** @deprecated Replaced wtih {@link #deregisterFactory(Object)} */
-    @Deprecated
-    public void registerServiceProvider(final Object provider) {
-        registerFactory(provider);
-    }
-
     /**
      * Manually register a factory.
      *
@@ -1001,11 +927,6 @@ public class FactoryRegistry {
         registry.registerInstance(factory);
     }
 
-    /** @deprecated Replaced with {@link #registerFactory(Object, Class)} */
-    @Deprecated
-    public <T> boolean registerServiceProvider(final T provider, final Class<T> category) {
-        return registerFactory(provider, category);
-    }
     /**
      * Manually register a factory.
      *
@@ -1128,18 +1049,14 @@ public class FactoryRegistry {
                         T factory = getFactoryByClass(factoryClass);
                         if (factory == null)
                             try {
-                                factory = factoryClass.newInstance();
+                                factory = factoryClass.getDeclaredConstructor().newInstance();
                                 if (registerFactory(factory, category)) {
                                     message.append(System.getProperty("line.separator", "\n"));
                                     message.append("  ");
                                     message.append(factoryClass.getName());
                                     newFactories = true;
                                 }
-                            } catch (IllegalAccessException exception) {
-                                throw new FactoryRegistryException(
-                                        Errors.format(ErrorKeys.CANT_CREATE_FACTORY_$1, classname),
-                                        exception);
-                            } catch (InstantiationException exception) {
+                            } catch (Exception exception) {
                                 throw new FactoryRegistryException(
                                         Errors.format(ErrorKeys.CANT_CREATE_FACTORY_$1, classname),
                                         exception);
@@ -1267,12 +1184,6 @@ public class FactoryRegistry {
         registry.deregisterInstances(category);
     }
 
-    /** @deprecated {@link #deregisterFactories(Iterator)} */
-    @Deprecated
-    public void deregisterServiceProviders(final Iterator<?> providers) {
-        deregisterFactories(providers);
-    }
-
     /**
      * Manually deregister factories.
      *
@@ -1299,12 +1210,6 @@ public class FactoryRegistry {
         factories.forEach(this::deregisterFactory);
     }
 
-    /** @deprecated {@link #deregisterFactory(Object)} */
-    @Deprecated
-    public void deregisterServiceProvider(final Object provider) {
-        deregisterFactory(provider);
-    }
-
     /**
      * Manually deregister a factory
      *
@@ -1315,12 +1220,6 @@ public class FactoryRegistry {
      */
     public void deregisterFactory(final Object factory) {
         registry.deregisterInstance(factory);
-    }
-
-    /** @deprecated {@link #deregisterFactory(Object, Class)} */
-    @Deprecated
-    public <T> void deregisterServiceProvider(final T provider, final Class<T> category) {
-        deregisterFactory(provider);
     }
 
     /**
@@ -1403,18 +1302,6 @@ public class FactoryRegistry {
             previous.add(f1);
         }
         return set;
-    }
-
-    /** @deprecated Replaced with {@link #setOrdering(Class, boolean, Predicate, Predicate)} */
-    @Deprecated
-    public <T> boolean setOrdering(
-            final Class<T> base,
-            final boolean set,
-            final ServiceRegistry.Filter filter1,
-            final ServiceRegistry.Filter filter2) {
-        ensureArgumentNonNull("filter1", filter1);
-        ensureArgumentNonNull("filter2", filter2);
-        return setOrdering(base, set, (Predicate<T>) filter1::filter, filter2::filter);
     }
 
     /**
